# gfx-hal-examples

./: Cargo.toml
basic-window/: Cargo.toml
basic-window/data/: basic.vert
basic-window/src/: main.rs
gpu-list/: Cargo.toml
gpu-list/src/: main.rs
quad/: Cargo.toml
quad/src/: main.rs
