[package]
name = "gpu-list"
version = "0.1.0"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
gl = ["gfx-backend-gl", "winit"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
gfx-hal = "0.1.0"
gfx-backend-empty = "0.1.0"

[dependencies.gfx-backend-gl]
version = "0.1"
features = ["glutin"]
optional = true

[dependencies.winit]
version = "0.18.1"
optional = true

[dependencies.gfx-backend-vulkan]
version = "0.1"
optional = true

[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
version = "0.1"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.1"
optional = true